# ukladanka

./: CMakeLists.txt
src/: AppMain.cpp  AppMain.h  Reactor.cpp  Reactor.h  main.cpp
src/bl/: GameBoard.cpp  GameBoard.h  SquareBoard.h
src/bl/files-operations/: FileHandler.cpp  FileHandler.h  OpenDoClose.cpp  OpenDoClose.h  Reader.cpp  Reader.h  Splitter.cpp  Splitter.h  Writer.h
src/bl/files-operations/read/: Reader.h  StructureReader.h
src/bl/files-operations/write/: StructureWriter.h  Writer.cpp  Writer.h
src/includes/: Defines.h
src/includes/enumerations/: EmptyNeighbourPosition.h
src/includes/misc/: StructureFileNameConnection.cpp  StructureFileNameConnection.h
src/includes/structures/: Configuration.h  GameState.h  Move.h  Position.h  RankTable.h  SingleRankTableRecord.h
src/logger/: LogLine.cpp  LogLine.h  Logger.cpp  Logger.h
